--- a/hw04/templates/index.html
+++ b/hw04/templates/index.html
@@ -8,14 +8,13 @@
 
 		<h3> Command Panel </h3>
         <p> Horizontal
-        <a href="/left">Move Left</a>
-        <a href="/right">Move Right</a>
+        <a href="/left" class="button"> Move Left</a>
+        <a href="/right" class="button"> Move Right</a>
         <p> Vertical
-        <a href="/up">Move Up</a>
-        <a href="/down">Move Down</a>
+        <a href="/up" class="button"> Move Up</a>
+        <a href="/down" class="button"> Move Down</a>
         <br><br>
-        <a href="/clear">Clear</a> <!-- Clear button -->
-		
+        <a href="/clear"class="button"> Clear</a> 
    </body>
 </html>
 
